--- a/Views/Riscos/Index.cshtml
+++ b/Views/Riscos/Index.cshtml
@@ -19,7 +19,7 @@
     <div class="page-actions">
         <div></div>
         <div class="btts">
-            <button type="button" class="btn-secondary btn-ajax-modal" id="btnIA" data-action-type="create"
+            <button type="button" class="btn-secondary" id="btnIA" data-action-type="create-modal"
                 data-url="@Url.Action("AnaliseRiscos", "IA")" data-title="Análise de Riscos e Soluções (IA)"
                 data-form-id="iaAnalysisForm">
                 <i class="fas fa-microchip"></i>
@@ -116,7 +116,8 @@
         <div class="empty-list-message">
             <i class="fas fa-file-excel icon-large"></i>
             <h3>Nenhum Risco Encontrado</h3>
-            <p>Clique em <b>Adicionar Novo Risco Manualmente</b> para registrar, classificar e iniciar o monitoramento e o tratamento do novo evento de risco.</p>
+            <p>Clique em <b>Adicionar Novo Risco Manualmente</b> para registrar, classificar e iniciar o monitoramento e o
+                tratamento do novo evento de risco.</p>
         </div>
     }
 </div>
