--- a/Views/Colaboradores/_DetailsColaboradorPartial.cshtml
+++ b/Views/Colaboradores/_DetailsColaboradorPartial.cshtml
@@ -34,6 +34,11 @@
             <dt class="col-sm-4">Data de Admissão:</dt>
             <dd class="col-sm-8">@Model.DataAdmissao.ToShortDateString()</dd>
         </div>
+
+        <div class="row mb-2">
+            <dt class="col-sm-4">Acesso: </dt>
+            <dd class="col-sm-8">@Model.StatusAcesso</dd>
+        </div>
     </div>
 </div>
 
