--- a/Views/Conta/Register.cshtml
+++ b/Views/Conta/Register.cshtml
@@ -19,11 +19,6 @@
     <form asp-controller="Conta" asp-action="Register" method="post" class="auth-form">
         <h2>Criar Conta</h2>
 
-        @if (ViewBag.Erro != null)
-        {
-            <div class="error-message">@ViewBag.Erro</div>
-        }
-
         <div class="form-group">
             <label for="nome">Nome</label>
             <input type="text" id="nome" name="Nome" required />
@@ -44,3 +39,12 @@
         </p>
     </form>
 </div>
+   @if (TempData["Sucesso"] != null)
+    {
+        <div class="success-message">@TempData["Sucesso"]</div>
+    }
+
+    @if (ViewBag.Erro != null)
+    {
+        <div class="error-message">@ViewBag.Erro</div>
+    }
