--- a/Views/Equipamentos/_DetailsEquipamentoPartial.cshtml
+++ b/Views/Equipamentos/_DetailsEquipamentoPartial.cshtml
@@ -14,19 +14,24 @@
         <dt class="col-sm-6">Identificador:</dt>
         <dd class="col-sm-6">@Model.IdentificadorBroker</dd>
     </div>
-    
+
     <div class="row mb-2">
         <dt class="col-sm-6">Localização:</dt>
         <dd class="col-sm-6">@Model.Localizacao</dd>
     </div>
-    
+
     <div class="row mb-2">
         <dt class="col-sm-6">Tipo de Sensor:</dt>
         <dd class="col-sm-6">@Model.TipoSensor</dd>
     </div>
 
     <hr class="divider" />
-    
+
+    <div class="row mb-2">
+        <dt class="col-sm-6">Última Medição:</dt>
+        <dd class="col-sm-6"><b>@Model.UltimaMedicao</b></dd>
+    </div>
+
     <div class="row mb-2">
         <dt class="col-sm-6">Status Atual:</dt>
         <dd class="col-sm-6">
