--- a/Views/Equipamentos/_MonitorarEquipamentoPartial.cshtml
+++ b/Views/Equipamentos/_MonitorarEquipamentoPartial.cshtml
@@ -77,6 +77,7 @@
                 $('#monitor-localizacao').text(data.localizacao);
                 $('#monitor-tiposensor').text(data.tipoSensor);
                 $('#monitor-ultima-atualizacao').text(data.ultimaAtualizacao);
+                $('#monitor-valor-medicao').text(data.valorMedicao);
                 
                 // Atualiza o status e a classe do badge
                 $('#monitor-status-badge').text(data.status);
