--- a/Views/Riscos/Index.cshtml
+++ b/Views/Riscos/Index.cshtml
@@ -128,7 +128,7 @@
 
 @section Scripts {
     <script src="/js/Partialjs.js" asp-append-version="true"></script>
-
+    <script src="/js/Signal.js"></script>
     <script>
         $(document).ready(function () {
             // 2. Faz a requisição AJAX GET
