--- a/Views/Riscos/_CreateRiscoPartial.cshtml
+++ b/Views/Riscos/_CreateRiscoPartial.cshtml
@@ -43,13 +43,8 @@
             <div>
                 <div class="form-group mb-3">
                     <label asp-for="Status" class="form-label">Status</label>
-                    <select asp-for="Status" class="form-control">
-                        <option value="">-- Selecione o Status --</option>
-                        <option value="Ativo">Ativo</option>
-                        <option value="Inativo">Inativo</option>
-                        <option value="Pendente">Pendente</option>
-                        <option value="Concluido">Concluído</option>
-                    </select>
+                            <select asp-for="Status" asp-items="Html.GetEnumSelectList<StatusRisco>()"
+                        class="form-select"></select>
                     <span asp-validation-for="Status" class="text-danger"></span>
                 </div>
             </div>
