--- a/Views/Colaboradores/Index.cshtml
+++ b/Views/Colaboradores/Index.cshtml
@@ -104,7 +104,7 @@
     @if (!hasRelatorios)
     {
         <div class="empty-list-message">
-            <i class="fas fa-file-excel icon-large"></i>
+            <i class="fas fa-users icon-large"></i>
             <h3>Nenhum Colaborador Encontrado</h3>
             <p>Clique em <b>Adicionar Novo Colaborador</b> para vincular o usuário e configurar suas permissões de acesso e
                 monitoramento.</p>
