--- a/Views/Equipamentos/Index.cshtml
+++ b/Views/Equipamentos/Index.cshtml
@@ -105,7 +105,7 @@
     @if (!hasRelatorios)
     {
         <div class="empty-list-message">
-            <i class="fas fa-file-excel icon-large"></i>
+            <i class="fas fa-wrench icon-large"></i>
             <h3>Nenhum Equipamento Encontrado</h3>
             <p>Clique em <b>Conectar Novo Equipamento</b> para iniciar a coleta de dados e monitoramento</p>
         </div>
