--- a/Views/Riscos/Index.cshtml
+++ b/Views/Riscos/Index.cshtml
@@ -109,7 +109,7 @@
     @if (!hasRelatorios)
     {
         <div class="empty-list-message">
-            <i class="fas fa-file-excel icon-large"></i>
+            <i class="fas fa-exclamation-triangle icon-large text-warning"></i>
             <h3>Nenhum Risco Encontrado</h3>
             <p>Clique em <b>Adicionar Novo Risco Manualmente</b> para registrar, classificar e iniciar o monitoramento e o
                 tratamento do novo evento de risco.</p>
