--- a/Views/Analises/_DetailsAnalisePartial.cshtml
+++ b/Views/Analises/_DetailsAnalisePartial.cshtml
@@ -5,7 +5,7 @@
 <div class="details-container">
     <div class="row mb-2">
         <dt class="col-sm-4">Risco Analisado:</dt>
-        <dd class="col-sm-8">@Model.Risco.Nome (#@Model.RiscoId)</dd>
+        <dd class="col-sm-8">@Model.Risco.Nome</dd>
     </div>
 
     <div class="row mb-2">
