--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -148,7 +148,7 @@
                                     <i class="fas fa-user-circle"></i>
                                     <span>Perfil</span>
                                 </a>
-                                <a href="#">
+                                <a asp-controller="Configuracoes" asp-action="Index">
                                     <i class="fas fa-cog"></i>
                                     <span>Configurações</span>
                                 </a>
