--- a/Views/Configuracoes/ConfigBroker.cshtml
+++ b/Views/Configuracoes/ConfigBroker.cshtml
@@ -29,7 +29,7 @@
             </div>
         }
 
-        <form asp-action="Index" method="post">
+        <form asp-action="ConfigBroker" method="post">
             @Html.AntiForgeryToken()
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
