--- a/Views/Analises/_SelectRiscoPartial.cshtml
+++ b/Views/Analises/_SelectRiscoPartial.cshtml
@@ -7,7 +7,7 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <p class="mb-3">
-        Selecione o Risco existente que você deseja submeter à Inteligência Artificial para gerar a **Análise Preventiva** e as **Soluções Sugeridas**.
+        Selecione o Risco existente que você deseja submeter à Inteligência Artificial para gerar a <b>Análise Preventiva</b> e as <b>Soluções Sugeridas</b>.
     </p>
 
     <div class="form-group mb-3">
