--- a/Views/Equipamentos/Index.cshtml
+++ b/Views/Equipamentos/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="PageFlex">
     <div class="page-header">
-        <h1 class="page-title">Equipamentos IoT</h1>
+        <h1 class="page-title">Equipamentos</h1>
         <div class="breadcrumb">
             <a href="@Url.Action("Index", "Home")">Dashboard</a>
             <span class="separator">/</span>
